@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        {static} + LOSS : int
        {static} + RESTART : int
        {static} + SUCCESS : int
        + comboBox : ComboBox
        + sum : Text
        + support : Label
        - answerStr : String
        - count : int
        - sumNumber : int
        + initialize()
        + pickNumber()
        + randomNumbers()
        + restartGame()
        + submitClicked()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
    }
  }
  

  sample.Controller o-- model.Handler : chain
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
